Revert "すべてのAPIのデータ構造をシンプルに"
This reverts commit f37bc117f566cd22091d9f7b3569b6050203c230.
