# src/api/dailyPaymentAmount.ts
@@ -27,8 +27,10 @@ export default functions.https.onRequest(async (request, response) => {
 
   // レスポンスを作成する
   const responseObject: APIResponseType<'fetchDailyPaymentAmount'> = {
-    days: Object.keys(amountsByDate),
-    amounts: Object.values(amountsByDate)
+    data: {
+      days: Object.keys(amountsByDate),
+      amounts: Object.values(amountsByDate)
+    }
   }
   cors(request, response, () => {
     response.json(responseObject)
